--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-  <script src="node-modules/@popperjs/core/dist/umd/popper.js"></script>
+<!--   <script src="node-modules/@popperjs/core/dist/umd/popper.js"></script> -->
   <script type="text/javascript" src="node-modules/bootstrap/dist/js/bootstrap.min.js"></script>
   
 </head>
